--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" crossorigin="anonymous"></script>
     <script>
         // connecting frontend with backend port
-        const socket=io.connect("http://localhost:5000");
+        const socket=io.connect("https://my-pepboard-clone.herokuapp.com/");
     </script>
     <script src="./tools.js"></script>
     <script src="./canvas.js"></script>
